Add table styles

--- a/HR/HR-war/web/resources/style.css
+++ b/HR/HR-war/web/resources/style.css
@@ -27,6 +27,10 @@ button {
   background-color: transparent;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* Container */
 .container {
   position: absolute;
@@ -77,11 +81,10 @@ button {
   visibility: hidden;
   transition: opacity .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-.profile__avatar {
+.profile__avatar, .logo {
   position: absolute;
   z-index: 1;
   left: 50%;
-  top: -10%;
   transform: translateX(-50%);
   border-radius: 1.25em;
   overflow: hidden;
@@ -91,6 +94,9 @@ button {
   height: 85%;*/
   display: block;
   transition: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.profile__avatar {
+    top: -10%;
 }
 .profile__avatar:focus {
   outline: 0;
@@ -141,10 +147,11 @@ input:valid + .label {
 /* Button */
 .btn {
   border: 0;
-  font-size: 0.75rem;
+  font-size: 16px;
   height: 2.5rem;
-  line-height: 2.5rem;
-  padding: 0 1.5rem;
+  /*line-height: 2.5rem;*/
+  /*padding: 0 1.5rem;*/
+  padding: 10px;
   color: white;
   background: #8E49E8;
   text-transform: uppercase;
@@ -171,4 +178,143 @@ input:valid + .label {
     opacity: 1;
     top: 50%;
   }
+}
+
+.top_margin {
+    margin-top: 60px;
+}
+div.table-title {
+   display: block;
+  margin: auto;
+  max-width: 600px;
+  padding:5px;
+  width: 100%;
+}
+
+.table-title h3 {
+   color: #fafafa;
+   font-size: 30px;
+   font-weight: 400;
+   font-style:normal;
+   font-family: "Roboto", helvetica, arial, sans-serif;
+   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+   text-transform:uppercase;
+}
+
+
+/*** Table Styles **/
+
+.table-fill {
+  background: white;
+  border-radius:3px;
+  border-collapse: collapse;
+  max-width: 600px;
+  padding:5px;
+  width: 100%;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.bottom_margin {
+    margin-bottom: 50px;
+}
+ 
+th {
+  color:#D5DDE5;;
+  background:#1b1e24;
+  border-bottom:4px solid #9ea7af;
+  border-right: 1px solid #343a45;
+  font-size:23px;
+  font-weight: 100;
+  padding:24px;
+  text-align:left;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  vertical-align:middle;
+}
+
+th:first-child {
+  border-top-left-radius:3px;
+}
+ 
+th:last-child {
+  border-top-right-radius:3px;
+  border-right:none;
+}
+  
+tr {
+  border-top: 1px solid #C1C3D1;
+  border-bottom-: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:16px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+ 
+tr:hover td {
+  background:#4E5066;
+  color:#FFFFFF;
+  border-top: 1px solid #22262e;
+  border-bottom: 1px solid #22262e;
+}
+ 
+tr:first-child {
+  border-top:none;
+}
+
+tr:last-child {
+  border-bottom:none;
+}
+ 
+tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+ 
+tr:nth-child(odd):hover td {
+  background:#4E5066;
+}
+
+tr:last-child td:first-child {
+  border-bottom-left-radius:3px;
+}
+ 
+tr:last-child td:last-child {
+  border-bottom-right-radius:3px;
+}
+ 
+td {
+  background:#FFFFFF;
+  padding:20px;
+  text-align:left;
+  vertical-align:middle;
+  font-weight:300;
+  font-size:18px;
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #C1C3D1;
+}
+
+td:last-child {
+  border-right: 0px;
+}
+
+th.text-left {
+  text-align: left;
+}
+
+th.text-center {
+  text-align: center;
+}
+
+th.text-right {
+  text-align: right;
+}
+
+td.text-left {
+  text-align: left;
+}
+
+td.text-center {
+  text-align: center;
+}
+
+td.text-right {
+  text-align: right;
 }
