--- a/HR/HR-war/web/resources/style.css
+++ b/HR/HR-war/web/resources/style.css
@@ -318,3 +318,39 @@ td.text-center {
 td.text-right {
   text-align: right;
 }
+
+.error{
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 40px;
+  background: rgba(0,0,0,.3);
+  width:240px;
+  border-radius:2px;
+}
+.error2{
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background: rgba(0,0,0,.3);
+    width: 300px;
+    padding:10px;
+    border-radius:2px;
+}
+a:link, a:visited, a:active{
+    color: white;
+    text-decoration: none;
+}
+.options{
+    background: rgba(0,0,0,.3);
+    width:100px;
+    margin-right: auto;
+    margin-left: auto;
+    padding:10px;
+    border-radius:2px;
+}
+a:hover{
+  text-shadow: 0px 0px 10px #3498db;
+}
